# snaplet-oauth

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  TODO  notes.lhs  snaplet-oauth.cabal
data/: Key.Google.hs  Key.Weibo.hs  Key.hs.default  google.json  init-keys.hs  init-keys.sh  notes.lhs  weibo.json
example/: Makefile  example.cabal  site_key.txt
example/snaplets/heist/templates/: _login.tpl  index.tpl
example/src/: Application.hs  Keys.hs.default  Main.hs  OAuthHandlers.hs  Site.hs  Splices.hs
example2/: snap.hs
example2/Weibo/: Api.hs
src/Snap/Snaplet/: OAuth.hs
src/Snap/Snaplet/OAuth/: Github.hs  Google.hs  Handlers.hs  Splices.hs  Types.hs  Utils.hs  Weibo.hs
src/Snap/Snaplet/OAuth/Github/: Api.hs
src/Snap/Snaplet/OAuth/Google/: Api.hs  Key.hs
src/Snap/Snaplet/OAuth/Internal/: Handlers.hs  Splices.hs  Types.hs  Utils.hs
src/Snap/Snaplet/OAuth/Weibo/: Api.hs  Key.hs  Types.hs
test/: Api.hs  Types.hs  Utils.hs  Weibo.hs  snap.hs  tests.hs  unit-test.hs
test/Taobao/: Api.hs  Types.hs
test/Weibo/: Api.hs  Key.hs.default  Types.hs  snap.hs
test/snaplets/heist/templates/: index.tpl
