
Name:                snaplet-oauth
Version:             0.0.3
Synopsis:            snaplet-oauth
Description:         This lib is in Alpha status and APIs are likely to be changed.
Homepage:            freizl.github.com
License:             BSD3
License-file:        LICENSE
Author:              Haisheng,Wu
Maintainer:          freizl@gmail.com
Copyright:           Haisheng,Wu
Category:            Web
Build-type:          Simple
stability:           alpha

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:  

Cabal-version:       >=1.10

Library
  default-language:  Haskell2010
  Hs-Source-Dirs: src
  Exposed-modules:     
      Snap.Snaplet.OAuth

  Build-Depends:    
      base                 >= 4     && < 5,
      bytestring           >= 0.9   && < 1.0,
      data-lens            >= 2.0.1 && < 2.11,
      data-lens-template   == 2.1.*,
      failure              >= 0.1,
      hoauth2              == 0.2.2,
      snap                 == 0.9.*,
      snap-core            == 0.9.*,
      snap-loader-dynamic  == 0.9.*,
      snap-loader-static   == 0.9.*


  if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
                   -Werror
  else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans     

Test-suite oauth-unit-tests
  Type:           exitcode-stdio-1.0
  Hs-source-dirs: test
  Main-is:        unit-test.hs
  Ghc-options:    -Wall
  default-language:  Haskell2010
  Build-depends:
    -- Copied from regular dependencies:
    HUnit                >= 1.2  && < 1.3,
    aeson                >= 0.6  && < 0.7,
    base                 >= 4    && < 5,
    bytestring           >= 0.9  && < 1.0,
    bytestring-show      >= 0.3  && < 0.4,
    test-framework       >= 0.6  && < 0.7,
    test-framework-hunit >= 0.2  && < 0.3,
    text                 >= 0.11 && < 0.12
