
Name:                snaplet-oauth
Version:             0.0.6
Synopsis:            snaplet-oauth
Description:         This lib is in Alpha status and APIs are likely to be changed.
Homepage:            https://github.com/HaskellCNOrg/snaplet-oauth
License:             BSD3
License-file:        LICENSE
Author:              Haisheng,Wu
Maintainer:          freizl@gmail.com
Copyright:           Haisheng,Wu
Category:            Web
Build-type:          Simple
stability:           alpha
Cabal-version:       >=1.10

Source-Repository head
  Type:     git
  Location: git://github.com/HaskellCNOrg/snaplet-oauth.git


-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:  


Library
  default-language:  Haskell2010
  Hs-Source-Dirs: src
  Exposed-modules:     
      Snap.Snaplet.OAuth
      -- TODO hide internal???
      Snap.Snaplet.OAuth.Weibo
      Snap.Snaplet.OAuth.Google
      Snap.Snaplet.OAuth.Github

  Other-Modules:
      Snap.Snaplet.OAuth.Internal.Types
      Snap.Snaplet.OAuth.Internal.Handlers
      Snap.Snaplet.OAuth.Internal.Utils
      Snap.Snaplet.OAuth.Weibo.Api
      Snap.Snaplet.OAuth.Google.Api
      Snap.Snaplet.OAuth.Github.Api

  Build-Depends:    
      base                 >= 4     && < 5,
      bytestring           >= 0.9   && < 1.0,
      data-lens            >= 2.0.1 && < 2.11,
      text                 >= 0.11  && < 0.12,
      bytestring-show      >= 0.3.5 && < 0.4,
      aeson                >= 0.6   && < 0.7,
      data-lens-template   == 2.1.*,
      failure              >= 0.1,
      snap                 == 0.9.*,
      snap-core            == 0.9.*,
      snap-loader-dynamic  == 0.9.*,
      snap-loader-static   == 0.9.*,
      heist                == 0.8.*,
      MonadCatchIO-mtl     >= 0.3 && < 0.4,
      unordered-containers >= 0.2 && < 0.3,
      hashable             >= 1.1.2 && < 1.2,
      http-types           >= 0.7 && < 0.8,
      http-conduit         >= 1.8.3 && < 1.8.4,
      hoauth2              >= 0.2.5 && < 0.2.6


  if impl(ghc >= 6.12.0)
      ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
                   -fno-warn-orphans -fno-warn-unused-do-bind
  else
      ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
                   -fno-warn-orphans     

Test-suite oauth-unit-tests
  Type:           exitcode-stdio-1.0
  Hs-source-dirs: tests
  Main-is:        tests.hs
  Ghc-options:    -Wall
  default-language:  Haskell2010
  Build-depends:
    -- Copied from regular dependencies:
    HUnit                >= 1.2  && < 1.3,
    aeson                >= 0.6  && < 0.7,
    base                 >= 4    && < 5,
    bytestring           >= 0.9  && < 1.0,
    bytestring-show      >= 0.3  && < 0.4,
    test-framework       >= 0.6  && < 0.9,
    test-framework-hunit >= 0.2  && < 0.4,
    text                 >= 0.11 && < 0.12,
    snaplet-oauth        >= 0.0.5 && < 0.0.7
